[project]
name = "heptools"
version = "0.4.1"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "numpy",
    "matplotlib",
    "dask-jobqueue",
    # Scikit-HEP
    "awkward",
    "uproot",
    "hist",
    # CMS
    "coffea",
    "correctionlib",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["heptools*"]
exclude = ["docs*", "docker*"]
